force-app/main/default/objects/TB_Message_Subscription__mdt/TB_Message_Subscription__mdt.object-meta.xml
<CustomObject>
    <description
    >Defines Subscriptions to each message.  Any time an message is fired, an outbox record will be setup for each Active subscription</description>
    <label>Message Subscription</label>
    <pluralLabel>Message Subscriptions</pluralLabel>
</CustomObject>