force-app/main/default/objects/TB_Message_Subscription__mdt/fields/After_Relay_Action__c.field-meta.xml
<CustomField>
    <fullName>After_Relay_Action__c</fullName>
    <description>IAfterRelayAction to run AFTER reply attempts</description>
    <inlineHelpText>IAfterRelayAction class to run AFTER reply attempts</inlineHelpText>
    <label>After Relay Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>