force-app/main/default/objects/TB_Message_Subscription__mdt/fields/Config__c.field-meta.xml
<CustomField>
    <fullName>Config__c</fullName>
    <description>Optional. Configuration for the Subscription. Passed to the Relay Client via the context</description>
    <inlineHelpText
    >Optional. Configuration for the Subscription. Passed to the Relay Client via the context</inlineHelpText>
    <label>Config</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>