force-app/main/default/objects/TB_Message_Subscription__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description
    >Allows Enabling/Disabling a subscription.  Determines if outbox records are created at the time the Message is inserted.  Outbox records that are already created will still attempt to send.</description>
    <inlineHelpText
    >Allows Enabling/Disabling a subscription.  Determines if outbox records are created at the time the Message is inserted.  Outbox records that are already created will still attempt to send.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>