force-app/main/default/objects/TB_Message_Subscription__mdt/fields/Isolate_Relay__c.field-meta.xml
<CustomField>
    <fullName>Isolate_Relay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Relay of this record will be preformed in its own &quot;Execution Context&quot;.  This provides the ability for the Relay Client to perform DML, but may impact performance.</description>
    <inlineHelpText>When checked, the Relay of this record will be preformed in its own &quot;Execution Context&quot;.  This provides the ability for the Relay Client to perform DML, but may impact performance.</inlineHelpText>
    <label>Isolate Relay</label>
    <type>Checkbox</type>
</CustomField>