force-app/main/default/objects/TB_Message_Subscription__mdt/fields/Mark_TTL_Event__c.field-meta.xml
<CustomField>
    <fullName>Mark_TTL_Event__c</fullName>
    <description>The outbox lifecycle event which results in "TTL Offset" being applied to the record.</description>
    <inlineHelpText>The outbox lifecycle event which results in TTL being applied to the record.</inlineHelpText>
    <label>Mark TTL Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>created</fullName>
                <default>true</default>
                <label>created</label>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>