force-app/main/default/objects/TB_Message_Subscription__mdt/fields/Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Attempts__c</fullName>
    <description>Number of times to attempt the message before it is deadlettered</description>
    <inlineHelpText>Number of times to attempt the message before it is deadlettered</inlineHelpText>
    <label>Max Attempts</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>