force-app/main/default/objects/TB_Message_Subscription__mdt/fields/TTL_Offset__c.field-meta.xml
<CustomField>
    <fullName>TTL_Offset__c</fullName>
    <description>The number of minutes this record will persist in the system after either Created or Delivered (controlled by &quot;Mark TTL Event&quot; field).

Request that scheduled record deletion is setup to automatically remove records.</description>
    <inlineHelpText>The number of minutes this record will persist in the system after either Creation or Delivery.

Request that scheduled record deletion is setup to automatically remove records.</inlineHelpText>
    <label>TTL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>